@@ -11,6 +11,7 @@ Pending changes in the mainline
 * Support decoding of RLE Lossless transfer syntax
 * Fix issue 11 (is_regular_file() fails for FILE_ATTRIBUTE_REPARSE_POINT)
 * Upgrade to Boost 1.60.0 for static builds
+* Support of signed 16bpp images in ParsedDicomFile
 
 
 Version 1.0.0 (2015/12/15)
